# firebolt-cli

./: .fossa.yml  .pre-commit-config.yaml  Dockerfile  INGEST_GETTING_STARTED.md  README.md  setup.cfg  sonar-project.properties
.github/workflows/: code-check.yml  docker-build.yml  fossa-scan.yml  integration-tests.yml  nightly-v0.yml  nightly.yml  pull-push-request.yml  pull-request.yml  push-request.yml  release.yml  security-scan.yml  unit-tests.yml
src/firebolt_cli/: common_options.py  completer.py  configure.py  database.py  engine.py  ingest.py  keywords.py  main.py  query.py  table.py  utils.py
tests/integration/: conftest.py  test_database.py  test_engine.py  test_query.py  test_table.py  test_utils.py
tests/unit/: conftest.py  test_common_options.py  test_completer.py  test_configure.py  test_database.py  test_engine.py  test_ingest.py  test_interactive_query.py  test_query.py  test_table.py  test_utils.py
