[metadata]
name = firebolt_cli
version = attr: firebolt_cli.__version__
description = CLI for Firebolt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/firebolt-db/firebolt-cli
author = Firebolt
author_email = support@firebolt.io
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Bug Tracker = https://github.com/firebolt-db/firebolt-cli/issues

[options]
packages = find:
install_requires =
    Pygments>=2.7.4
    appdirs==1.4.4
    click>=8.1.2
    firebolt-ingest>=0.3.0
    firebolt-sdk>=0.9.2
    keyring>=23.5.0
    prompt-toolkit>=3.0.29
    tabulate>=0.8.9
    types-Pygments>=2.9.15
    types-tabulate>=0.8.5
    urllib3>=1.25.8
python_requires = >=3.7
include_package_data = True
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    firebolt = firebolt_cli.main:main

[options.extras_require]
dev =
    appdirs-stubs==0.1.0
    mypy==0.910
    pre-commit==2.15.0
    pyfakefs==4.5.3
    pytest==6.2.5
    pytest-cov>=3.0.0
    pytest-mock>=3.6.1

[mypy]
disallow_untyped_defs = True
show_error_codes = True
files = src/

[flake8]
max-line-length = 88
per-file-ignores = __init__.py:F401
ignore = E203, W503
ban-relative-imports = True
inline-quotes = "
